make code more extensible
also, TONDEKEI

--- a/tondekei.html
+++ b/tondekei.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>SKREEEE</title>
+        <title>TONDEKEI</title>
 
         <meta name="description" content="spam your favorite shadowverse cards">
 
@@ -15,10 +15,10 @@
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript" src="js/skreeee.js"></script>
+        <script type="text/javascript" src="js/tondekei.js"></script>
     </head>
 
-    <body id="skreeee">
+    <body id="tondekei">
 
     </body>
 
