add more cards, update index page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
     </head>
 
     <body id="index">
-
+        <div class="grid">
+            <div class="cell">
+                <a href="skreeee.html"><img class="grid_img" src="img/card/wwroach.png"/></a>
+            </div>
+            <div class="cell">
+                <a href="tondekei.html"><img class="grid_img" src="img/card/kel.png"></a>
+            </div>
+            <div class="cell">
+                <a href="dingdong.html"><img class="grid_img" src="img/card/dingdong.png"></a>
+            </div>
+            <div class="cell">
+                <a href="fluffybutt.html"><img class="grid_img" src="img/card/fluffybutt.png"></a>
+            </div>
+            <div class="cell">
+                <a href="tartman.html"><img class="grid_img" src="img/card/tartman.png"></a>
+            </div>
+        </div>
     </body>
 
 </html>
